<?xml version="1.0"?>
<package>
  <name>yocs_db_manager</name>
  <version>0.0.0</version>
  <description>The yocs_db_manager package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/yocs_db_manager</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <build_depend>yocs_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>yocs_msgs</run_depend>

</package>
